--- a/views/admin/config_editor.ejs
+++ b/views/admin/config_editor.ejs
@@ -334,7 +334,7 @@
       </div>
     </fieldset>
 
-    <button type="submit" class="btn btn-green"><span class="font-paragon">Save Config</span></button>
+    <button type="submit" class="bg-blue-600 text-black dark:text-white px-4 py-2 rounded"><span class="font-paragon">Save Config</span></button>
   </form>
 </div>
 
