--- a/views/account.ejs
+++ b/views/account.ejs
@@ -24,5 +24,5 @@
     </label>
   </div>
 
-  <button type="submit" class="bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded text-white"><span class="font-paragon">Update Account</span></button>
+  <button type="submit" class="bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded !text-black dark:!text-white"><span class="font-paragon">Update Account</span></button>
 </form>
