--- a/views/account/character-export-status.ejs
+++ b/views/account/character-export-status.ejs
@@ -4,9 +4,11 @@
   <div id="statusBox"><span class="font-paragon">Checking status...</span></div>
   <progress id="exportProgress" value="0" max="1" style="width: 100%; display: none; margin-top: 10px;"></progress>
 
-  <div id="doneActions" style="display: none; margin-top: 20px;">
-    <a id="downloadLink" href="#" class="btn btn-success" download><span class="font-paragon">Download Export</span></a>
-  </div>
+  <a id="downloadLink" href="#" download
+    class="inline-block px-4 py-2 rounded bg-green-600 text-white hover:bg-green-700 dark:bg-green-500 dark:hover:bg-green-600 font-semibold transition-colors duration-200">
+    <span class="font-paragon">Download Export</span>
+  </a>
+
 </div>
 
 <script>
