--- a/views/admin/style-editor.ejs
+++ b/views/admin/style-editor.ejs
@@ -7,7 +7,7 @@
 </form>
 
 <form method="POST" action="/admin/style/reset" onsubmit="return confirm('Really reset to default?');">
-  <button type="submit" style="margin-top:1em; color:red;"><span class="font-paragon">🗑 Reset to Default</span></button>
+  <button type="submit" style="margin-top:1em;"><span class="font-paragon">🗑 Reset to Default</span></button>
 </form>
 
 <p><a href="/admin">← Back to Dashboard</a></p>
